[package]
name = "getnf"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0" }
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["blocking", "stream"] }
serde = "1.0.215"
serde_json = "1.0.133"
arkiv = "0.7.0"
